Fix dark mode, improge color class names, fix nav index.

--- a/src/scss/components/_dark_light.scss
+++ b/src/scss/components/_dark_light.scss
@@ -19,10 +19,12 @@
 }
 
 html:has(#color-scheme-light:checked) {
+  color-scheme: light;
   @include root-colors(vars.$colors);
 }
 
 html:has(#color-scheme-dark:checked) {
+  color-scheme: dark;
   @include root-colors(vars.$dark-colors);
 }
 
